# credit-scoring-api

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
logs/: api_logs.jsonl
models/: metadata.json
notebooks/: monitoring.ipynb  scoring_credit.ipynb
reports/: ops_monitoring.html
tests/: test_api.py  test_model.py
utils/: data_validation.py  logging_middleware.py
